2013-08-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c:  Add comment noting that axis_position_zeroaxis() must
	be called for each axis before plotting in order to set axis->term_zero.

	* src/graphics.c:  It is incorrect to skip the initial calls to
	axis_draw_2d_zeroaxis even if we know the zero axes will be drawn
	again later (e.g. grid is off or front).
	Bug #1267

	* src/datafile.c:  Fix segfault if we try to store strlen of a NULL
	column header string.

2013-08-06  Ethan A Merritt  <merritt@u.washington.edu>

	* src/eval.c (pop_or_convert_from_string):  Context-dependent 
	conversion of a string containing a number to an actual number is
	documented as evaluating to either an integer or a complex variable as
	appropriate.  However up to now it has always produced a complex in
	practice.  Now we really do evaluate to an integer if the string
	contains only digits and whitespace.
	Bug #1269

	* src/datafile.c:  Generalize the substitution of columnheaders into
	a string during evaluation of 'using' or 'title' in a plot command.
	This allows inclusion of more than one columnheader into a single
	resulting string.
	Bug #1271

	* src/gadgets.c:  The annoying crypto-definition of RCSid() at the
	top of the file has been wrong since 2000!?

2013-07-25  Ethan A Merritt  <merritt@u.washington.edu>

	* term/pslatex.trm:  Make the definition of \gptboxtext and friends 
	conditional on their not being defined already.  This prevents latex
	from complaining if multiple gnuplot graphs are included in the same
	*.tex document.  Another possibility would be to move the definition
	into gnuplot.cfg.
	Bug #1266

2013-07-22  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.h src/command.c (string_expand_macros do_line)
	src/misc.c (load_file):  Under some conditions, e.g. inside a multi-line
	clause in curly brackets, the input command line can be extended after
	it has already been checked for the presence of macros.  This caused any